--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,6 @@ CameraSpeedScalar=11.823862
 MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -175,16 +174,16 @@ TimelineEnabledSnaps=MontageSection
 
 [DetailCustomWidgetExpansion]
 ThirdPersonCharacter_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
-CapsuleComponent=
+CapsuleComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 MaterialInstanceConstant=
 Character=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 PlayerStart=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
-BrushComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
+BrushComponent=
 Enemy_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 NavMeshBoundsVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
-SceneComponent=
-Door_C=
+SceneComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
+Door_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 EditorExperimentalSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 EditorSettings=
@@ -307,11 +306,12 @@ Door Rotating=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharact
 StaticMeshComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 AnotherDoor_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
-BillboardComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
+BillboardComponent=
 PostProcessVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 BP_Sky_Sphere_C=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 LightmassImportanceVolume=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
 PrimitiveComponent=ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,K2Node_FunctionEntry.Inputs.InputArgument0,
+EnterDoor_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
@@ -368,7 +368,6 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/AnotherDoor.AnotherDoor
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1210,7 +1209,7 @@ Brush.BrushSettings=True
 Brush.Replication=True
 Brush.Actor=True
 Brush.Surface Materials=True
-Brush.Geometry=False
+Brush.Geometry=True
 Brush.Surface Properties=False
 LightmassPrimitiveSettingsObject.Lightmass=True
 EdGraph.Inputs=True
@@ -1322,33 +1321,50 @@ MeshMergingSettingsObject.MaterialSettings=True
 MeshMergingSettingsObject.LandscapeCulling=True
 MeshProxySettingsObject.ProxySettings=True
 MeshInstancingSettingsObject.Instancing=True
+Brush.Cooking=False
+EnterDoor_C.TransformCommon=True
+EnterDoor_C.Default=True
+EnterDoor_C.Rendering=True
+EnterDoor_C.Replication=True
+EnterDoor_C.Collision=True
+EnterDoor_C.Input=True
+EnterDoor_C.Actor=True
+EnterDoor_C.Tick=True
+Door_2_C.Tick=True
+Door_2_C.Default=True
+Door_2_C.Replication=True
+Door_2_C.Rendering=True
+Door_2_C.Collision=True
+Door_2_C.Actor=True
+Door_2_C.Input=True
+Door_2_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AnotherDoor
-MRUItem1=/Game/Blueprints/Door
-MRUItem2=/Game/StarterContent/Blueprints/Door
-MRUItem3=/Game/Blueprints/TestFind
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem5=/Game/Blueprints/Enemy
-MRUItem6=/Game/StarterContent/Props/SM_Door
-MRUItem7=/Game/StarterContent/Props/Materials/M_Door
-MRUItem8=/Game/MaterialInstances/FloorLvl
-MRUItem9=/Game/Materials/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327_Mat
-MRUItem10=/Game/Materials/T_CobbleStone_Rough_Mat
-MRUItem11=/Game/StarterContent/Architecture/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327
-MRUItem12=/Game/StarterContent/Architecture/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327_Mat
-MRUItem13=/Game/StarterContent/Architecture/Floor
-MRUItem14=/Game/ThirdPersonBP/Enemy
-MRUItem15=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem17=/Game/ThirdPersonBP/ThirdPersonCharacter
-MRUItem18=/Game/ThirdPersonBP/EnemyMaterial
-MRUItem19=/Game/ThirdPersonBP/PlayerMaterial
+MRUItem0=/Game/Blueprints/SM_Door_2
+MRUItem1=/Game/Blueprints/Door_2
+MRUItem2=/Game/Blueprints/EnterDoor
+MRUItem3=/Game/Blueprints/SM_Door
+MRUItem4=/Game/Blueprints/Door
+MRUItem5=/Game/StarterContent/Props/SM_Door
+MRUItem6=/Game/MaterialInstances/FloorLvl
+MRUItem7=/Game/Materials/T_CobbleStone_Pebble_Mat
+MRUItem8=/Game/Blueprints/AnotherDoor
+MRUItem9=/Game/StarterContent/Blueprints/Door
+MRUItem10=/Game/Blueprints/TestFind
+MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem12=/Game/Blueprints/Enemy
+MRUItem13=/Game/StarterContent/Props/Materials/M_Door
+MRUItem14=/Game/Materials/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327_Mat
+MRUItem15=/Game/Materials/T_CobbleStone_Rough_Mat
+MRUItem16=/Game/StarterContent/Architecture/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327
+MRUItem17=/Game/StarterContent/Architecture/M_Floor_400x400_T_Brick_Cut_Stone_Mat_64902748408790499D18A98A26711327_Mat
+MRUItem18=/Game/StarterContent/Architecture/Floor
+MRUItem19=/Game/ThirdPersonBP/Enemy
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" "
 ThirdPersonCharacter_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -1368,14 +1384,16 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[22]\" "
-StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMesh=
+StreamableRenderAsset=
 
 [AssetEditorToolkitTabLocation]
 /Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin=1
@@ -1401,6 +1419,9 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 /Game/Blueprints/TestFind.TestFind=1
 /Game/Blueprints/Door.Door=1
 /Game/Blueprints/AnotherDoor.AnotherDoor=1
+/Game/Materials/T_CobbleStone_Pebble_Mat.T_CobbleStone_Pebble_Mat=1
+/Game/Blueprints/SM_Door.SM_Door=1
+/Game/Blueprints/EnterDoor.EnterDoor=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -1506,7 +1527,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
@@ -1524,36 +1545,37 @@ Theme0=New Theme
 Theme1=New Theme 1
 
 [PlacementMode]
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Blueprints/AnotherDoor.AnotherDoor;
-RecentlyPlaced=/Game/Blueprints/Door.Door;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x400.Wall_Door_400x400;
-RecentlyPlaced=/Game/StarterContent/Blueprints/Assets/M_LightStage_Skybox_HDRI.M_LightStage_Skybox_HDRI;
-RecentlyPlaced=/Game/StarterContent/Blueprints/Assets/SM_Arrows.SM_Arrows;
-RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight;
+RecentlyPlaced=/Game/Blueprints/Door_2.Door_2;
+RecentlyPlaced=/Game/Blueprints/EnterDoor.EnterDoor;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Marble_Polished.M_Rock_Marble_Polished;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Basalt.M_Rock_Basalt;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Sandstone.M_Rock_Sandstone;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
-RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Door.M_Door;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Door.SM_Door;
-RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Window_400x300.Wall_Window_400x300;
-RecentlyPlaced=/Game/MaterialInstances/FloorLvl.FloorLvl;
-RecentlyPlaced=/Game/StarterContent/Textures/T_CobbleStone_Rough_D.T_CobbleStone_Rough_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Ground_Gravel_D.T_Ground_Gravel_D;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Cut_Stone.M_Brick_Cut_Stone;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Grime.M_Concrete_Grime;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Panels.M_Concrete_Panels;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile_Pulse.M_Tech_Hex_Tile_Pulse;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ceramic_Tile_Checker.M_Ceramic_Tile_Checker;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Old.M_Brick_Clay_Old;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
 
 [MessageLog]
 LastLogListing=MapCheck
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.StaticMesh=False
-StaticMeshActor.Materials=False
+StaticMeshActor.Materials=True
 K2Node_FunctionEntry.Graph=True
 BoxComponent.Collision=False
 BoxComponent.Physics=False
+Brush.BrushSettings=True
 
 [RootWindow]
 ScreenPosition=X=58.000 Y=168.000
